# IIIVstruct

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  integration.sh  performance.sh  run.sh  test.sh
include/: Edge.h  Face.h  Plane.h  Solid.h  Vector.h  Vertex.h
python/: main.py  project_example.py  visualize.py  visualize_vector.py
src/: CMakeLists.txt  bindings.cpp
src/lib/: CMakeLists.txt  Face.cpp  Plane.cpp  Solid.cpp  Vector.cpp  Vertex.cpp
tests/: CMakeLists.txt  test_face.cpp  test_solid.cpp  test_vector.cpp  test_vertex.cpp
